Bug Fixes:
-Fixed bug where if you capitalized the word in bwg it would be impossible to win

New Features/Updates:





