@@ -52,7 +52,7 @@
     "description": "Move !insults or !boo 3 times"
   },
   "14": {
-    "name": "Kumiko Connoiseur",
+    "name": "Kumiko Connoisseur",
     "description": "Use !kumiko 25 times"
   },
   "15": {
