@@ -1,1 +1,1 @@
-{"450001712305143869":{"name":"Colin","gbp":157.25,"achievements":[],"simmerdown":0},"497803559144914944":{"name":"Andrew","gbp":808,"achievements":[],"simmerdown":0},"499328039621230592":{"name":"Wyatt","gbp":5202.5,"achievements":[],"simmerdown":0},"463080062175019010":{"name":"Ian","gbp":281.25,"achievements":[],"simmerdown":0},"210861925771247636":{"name":"Zaid","gbp":253.5,"achievements":[],"simmerdown":0},"501929393401364481":{"name":"Mike","gbp":417,"achievements":[],"simmerdown":0},"509430603339399186":{"name":"Brian","gbp":787.5,"achievements":[],"simmerdown":0},"526190184455471105":{"name":"Carl","gbp":1040.25,"achievements":[],"simmerdown":0},"462798271195119626":{"name":"Alex","gbp":1057.75,"achievements":[],"simmerdown":0},"562203622474252288":{"name":"Dylan","gbp":594,"achievements":[],"simmerdown":0},"501887537451630593":{"name":"Ramzi","gbp":740,"achievements":[],"simmerdown":0},"434471986748456962":{"name":"Chrisvan","gbp":272,"achievements":[],"simmerdown":0},"497861779020578837":{"name":"Hayden","gbp":451.74,"achievements":[],"simmerdown":0},"501930484838957069":{"name":"Tom","gbp":508,"achievements":[],"simmerdown":0},"581903756111773716":{"name":"Justin","gbp":503,"achievements":[],"simmerdown":0},"508076579684089896":{"name":"Jacob","gbp":117.07,"achievements":[],"simmerdown":0},"525147400176664626":{"name":"Teddy","gbp":770.5,"achievements":[],"simmerdown":0},"640368746690510868":{"name":"Slim","gbp":560,"achievements":[],"simmerdown":0},"498262864541515786":{"name":"Derek","gbp":658,"achievements":[],"simmerdown":0}}
+{"450001712305143869":{"name":"Colin","gbp":60,"achievements":[7],"simmerdown":0},"497803559144914944":{"name":"Andrew","gbp":908,"achievements":[],"simmerdown":0},"499328039621230592":{"name":"Wyatt","gbp":5202.5,"achievements":[],"simmerdown":0},"463080062175019010":{"name":"Ian","gbp":281.25,"achievements":[],"simmerdown":0},"210861925771247636":{"name":"Zaid","gbp":253.5,"achievements":[],"simmerdown":0},"501929393401364481":{"name":"Mike","gbp":417,"achievements":[],"simmerdown":0},"509430603339399186":{"name":"Brian","gbp":787.5,"achievements":[],"simmerdown":0},"526190184455471105":{"name":"Carl","gbp":1040.25,"achievements":[],"simmerdown":0},"462798271195119626":{"name":"Alex","gbp":1057.75,"achievements":[],"simmerdown":0},"562203622474252288":{"name":"Dylan","gbp":594,"achievements":[],"simmerdown":0},"501887537451630593":{"name":"Ramzi","gbp":740,"achievements":[],"simmerdown":0},"434471986748456962":{"name":"Chrisvan","gbp":272,"achievements":[],"simmerdown":0},"497861779020578837":{"name":"Hayden","gbp":451.74,"achievements":[],"simmerdown":0},"501930484838957069":{"name":"Tom","gbp":508,"achievements":[],"simmerdown":0},"581903756111773716":{"name":"Justin","gbp":503,"achievements":[],"simmerdown":0},"508076579684089896":{"name":"Jacob","gbp":117.07,"achievements":[],"simmerdown":0},"525147400176664626":{"name":"Teddy","gbp":770.5,"achievements":[],"simmerdown":0},"640368746690510868":{"name":"Slim","gbp":560,"achievements":[],"simmerdown":0},"498262864541515786":{"name":"Derek","gbp":658,"achievements":[],"simmerdown":0}}
