@@ -2,13 +2,13 @@
   "450001712305143869": {
     "name": "Colin",
     "lottery_tickets": 0,
-    "bj_wins": 0,
+    "bj_wins": 2,
     "bj_pushes": 0,
     "bj_losses": 0,
     "gg_wins": 0,
     "gg_losses": 0,
-    "total_msgs": 3,
-    "total_commands": 1,
+    "total_msgs": 14,
+    "total_commands": 14,
     "achievements": 0
   },
   "497803559144914944": {
