@@ -12,7 +12,7 @@
 
 !bank: Displays how many gbp the specified user has
 
-!insults: Allows you to see who is currently being insulted or to change who is being insulted for 2500 gbp
+!insults: Allows you to see who is currently being insulted or to change who is being insulted for 1500 gbp
 
 !delete: Deletes previous messages at a cost of 1000 gbp per message
 
